# corona-infection-prediction-br

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: update.yml
