[tool.poetry]
name = "corona-infection-prediction"
version = "0.1.0"
description = ""
authors = ["James Jarvis <jarjames@cisco.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.0.2"
matplotlib = "^3.2.0"
scipy = "^1.4.1"
lmfit = "^1.0.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
